<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space.normal"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space.small"
            app:cardBackgroundColor="@color/generic_background_color"
            app:cardCornerRadius="2dp"
            app:contentPadding="@dimen/space.normal"
            app:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:text="@string/event_main_info_block_title"
                    android:textColor="@color/color_event_title_top"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_title_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/generic_black_text_color"
                    android:theme="@style/EventCreationEditText" />

                <malakoff.dykh.DesignWidget.BetterSpinner
                    android:id="@+id/spinner_event_theme"
                    style="@style/DYKHSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:hint="@string/event_theme_hint" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_event_story"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/event_story_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/generic_black_text_color"
                    android:theme="@style/EventCreationEditText" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space.small"
            app:cardBackgroundColor="@color/generic_background_color"
            app:cardCornerRadius="2dp"
            app:contentPadding="@dimen/space.normal"
            app:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:text="@string/event_location_block_title"
                    android:textStyle="bold"
                    android:textColor="@color/color_event_title_top"
                    android:textSize="15sp" />

                <malakoff.dykh.DesignWidget.BetterSpinner
                    android:id="@+id/spinner_event_today_location"
                    style="@style/DYKHSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:hint="@string/event_today_location_hint" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edittext_event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_historic_location_hint"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/generic_black_text_color"
                    android:theme="@style/EventCreationEditText" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space.small"
            app:cardBackgroundColor="@color/generic_background_color"
            app:cardCornerRadius="2dp"
            app:contentPadding="@dimen/space.normal"
            app:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:text="@string/event_time_block_title"
                    android:textColor="@color/color_event_title_top"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <malakoff.dykh.DesignWidget.BetterSpinner
                    android:id="@+id/spinner_event_bc_or_ad"
                    style="@style/DYKHSpinnerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:hint="@string/event_which_bc_ad_hint" />

                <LinearLayout
                    android:id="@+id/event_date_setter_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space.normal"
                    android:layout_marginTop="@dimen/space.normal"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittext_event_year_setter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space.normal"
                        android:layout_marginRight="@dimen/space.normal"
                        android:hint="@string/event_year_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:nextFocusDown="@+id/edittext_event_month_setter"
                        android:textColor="@color/generic_black_text_color"
                        android:theme="@style/EventCreationEditText" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittext_event_month_setter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space.normal"
                        android:layout_marginRight="@dimen/space.normal"
                        android:hint="@string/event_month_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:nextFocusDown="@+id/edittext_event_day_setter"
                        android:textColor="@color/generic_black_text_color"
                        android:theme="@style/EventCreationEditText"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edittext_event_day_setter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/space.normal"
                        android:layout_marginRight="@dimen/space.normal"
                        android:hint="@string/event_day_hint"
                        android:inputType="text"
                        android:lines="1"
                        android:imeOptions="actionDone"
                        android:textColor="@color/generic_black_text_color"
                        android:theme="@style/EventCreationEditText"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ddd"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_event_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/space.big"
            android:layout_marginTop="@dimen/space.big"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/space.normal"
            android:text="@string/event_publish_button" />

    </LinearLayout>


</ScrollView>