<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#aaa">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space.normal"
        app:cardBackgroundColor="@color/generic_background_color"
        app:cardCornerRadius="2dp"
        android:layout_centerVertical="true"
        app:contentPadding="@dimen/space.normal"
        app:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space.normal"
                android:text="@string/app_login_screen"
                android:textColor="@color/color_event_title_top"
                android:textStyle="bold"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittext_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/generic_black_text_color"
                android:theme="@style/EventCreationEditText" />



            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittext_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/generic_black_text_color"
                android:theme="@style/EventCreationEditText" />


            <Button
                android:id="@+id/button_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space.big"
                android:layout_marginTop="@dimen/space.big"
                android:background="@color/colorPrimaryDark"
                android:clickable="true"
                android:padding="@dimen/space.normal"
                android:text="@string/button_login_connect" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>