<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space.small"
    app:cardBackgroundColor="@color/generic_background_color"
    app:cardCornerRadius="2dp"
    app:contentPadding="@dimen/space.normal"
    app:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/space.normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_event_date_header_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/space.small"
                android:text="@string/event_time_block_title"
                android:textColor="@color/color_event_title_top"
                android:textSize="15sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/button_event_cancel_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="@dimen/space.small"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_cancel"
                tools:ignore="RtlHardcoded"
                tools:visibility="visible" />

        </LinearLayout>

        <malakoff.dykh.DesignWidget.BetterSpinner
            android:id="@+id/spinner_event_bc_or_ad"
            style="@style/DYKHSpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space.normal"
            android:hint="@string/event_which_bc_ad_hint"
            android:visibility="gone"
            tools:visibility="visible" />


        <LinearLayout
            android:id="@+id/event_date_setter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space.normal"
            android:layout_marginTop="@dimen/space.normal"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3"
            tools:visibility="visible">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edittext_event_year_setter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space.normal"
                android:layout_marginRight="@dimen/space.normal"
                android:layout_weight=".8"
                android:hint="@string/event_year_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/spinner_event_month_setter"
                android:textColor="@color/generic_black_text_color"
                android:theme="@style/EventCreationEditText" />

            <malakoff.dykh.DesignWidget.BetterSpinner
                android:id="@+id/spinner_event_month_setter"
                style="@style/DYKHSpinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space.normal"
                android:layout_marginEnd="@dimen/space.normal"
                android:layout_marginRight="@dimen/space.normal"
                android:layout_weight="1.1"
                android:hint="@string/event_month_hint" />

            <malakoff.dykh.DesignWidget.BetterSpinner
                android:id="@+id/spinner_event_day_setter"
                style="@style/DYKHSpinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space.normal"
                android:layout_marginEnd="@dimen/space.normal"
                android:layout_marginRight="@dimen/space.normal"
                android:layout_weight="1.1"
                android:hint="@string/event_day_hint" />

        </LinearLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ddd"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/layout_event_date_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space.normal"
            android:padding="@dimen/space.normal"
            android:orientation="horizontal"
            android:gravity="end"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/event_creation_has_ending_date"
                android:layout_marginEnd="@dimen/space.normal"
                android:layout_marginRight="@dimen/space.normal" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_event_ending_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/progress_shadow_color"
                style="@style/SwitchCompatStyle"/>

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>